--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^6.1.18",
     "react-scripts": "5.0.0",
     "sass": "^1.49.0",
     "web-vitals": "^1.0.1"
