--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "4.0.0",
     "sass": "^1.49.0",
     "web-vitals": "^1.0.0",
+    "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
   "scripts": {
