--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@walletconnect/web3-provider": "^1.7.1",
     "ether.js": "^1.0.0",
+    "ipfs-http-client": "^56.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-map-gl": "^6.1.18",
