--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "app",
+  "name": "carbonium",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@openzeppelin/contracts": "^4.4.2",
     "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.0.0",
     "@walletconnect/web3-provider": "^1.7.1",
     "ether.js": "^1.0.0",
     "ipfs-http-client": "^56.0.0",
@@ -15,7 +15,7 @@
     "react-map-gl": "^6.1.18",
     "react-scripts": "4.0.0",
     "sass": "^1.49.0",
-    "web-vitals": "^1.0.0",
+    "web-vitals": "^2.0.0",
     "web3": "^1.7.0",
     "web3modal": "^1.9.5"
   },
@@ -47,7 +47,7 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
-    "dotenv": "^10.0.0",
+    "dotenv": "^14.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.0",
     "hardhat": "^2.4.1"
