--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.0.0",
     "@walletconnect/web3-provider": "^1.7.1",
+    "antd": "^4.18.5",
     "ether.js": "^1.0.0",
     "ipfs-http-client": "^56.0.0",
     "react": "^17.0.2",
