--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: 15.x
-        cache: 'yarn'
-    - run: yarn install
+        cache: 'npm'
+    - run: npm install
     - name: Run hardhat tests
       run: npx hardhat test
